# compi

./: .env.example  .gitignore  CLAUDE.md  main.py  manage.py  pyproject.toml
.github/workflows/: auto-add-to-project.yml  claude.yml  close-old-automation-issues.yml
.taicki/: CONVENTION.md
.taicki/config/: schedules-adhoc.yml  schedules.yml
.taicki/project/: state.yml
.taicki/project/issues/: 0001.yml  0002.yml  0003.yml  0004.yml  0005.yml  0006.yml  0007.yml  0008.yml  0009.yml  0010.yml  0011.yml  0012.yml  0013.yml  0014.yml  0015.yml  0016.yml  0017.yml  0018.yml  0019.yml  0020.yml
.taicki/project/operator/: issue-manager-prompt.md  operator-log-2026-06.md  operator-log-2026-07.md  operator-prompt.md  solver-log-2026-06.md  solver-log-2026-07.md  solver-prompt.md
compi/: asgi.py  settings.py  urls.py  wsgi.py
data/contests/: coding-contest-national.yml  ewha-kyunghyang-concours.yml  hme.yml  kjmo.yml  kjso.yml  kma.yml  kmao.yml  kmc.yml  kmchc.yml  kmo.yml  kodefare.yml  koi.yml  korea-music-student-contest.yml  kut-english.yml  kut-math.yml  mathkangaroo.yml  mbc-english.yml  mbc-math.yml  physics-olympiad.yml  samick-seiler-piano.yml  snue-math.yml  sungdae.yml  tesom.yml
scripts/: deploy.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/: config.ts  content.config.ts
site/src/components/: BaseHead.astro
site/src/pages/: faq.astro  index.astro  robots.txt.ts
site/src/pages/contests/: [id].astro
site/src/pages/grades/: [grade].astro
site/src/pages/subjects/: [subject].astro
site/src/utils/: contest.ts
