[project]
name = "compi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "markdown2>=2.5.5",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "unidecode>=1.4.0",
]
